--- a/public/wallet.html
+++ b/public/wallet.html
@@ -47,7 +47,7 @@
                 <div class="collapse navbar-collapse" id="navbarsExample07">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page">민팅하기</a>
+                            <a class="nav-link" aria-current="page" href="index.html">민팅하기</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="mynft.html">My-NFT</a>
